swe0/static/styles/index.css
.auth_sign_in {
  background: #eee;
  border-radius: 6px;
  display: inline-block;
  padding: 44px;
}

.auth_sign_in .buttons a {
  display: inline-block;
  padding-top: 20px;
  text-decoration: none;
}

.auth_sign_in .buttons a img {
  display: inline-block;
  height: 40px;
  width: 100%;
}

.dialog {
  margin: 0 auto;
  text-align: center;
  width: 100%;
}

